crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace/snapshots/query - workspace root with recursive.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-w"
    - "-r"
    - build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace
---
{
  "packages/app#build": [
    "packages/lib#build",
    "packages/utils#build"
  ],
  "packages/cli#build": [
    "packages/core#build"
  ],
  "packages/core#build": [],
  "packages/lib#build": [
    "packages/core#build"
  ],
  "packages/utils#build": []
}
